# CMake-Ep021

./: CMakeLists.txt  README.adoc  main.cpp
cmake/: AddFmt.cmake  ClangFormat.cmake
person/include/: person.hpp
person/src/: person.cpp
